# gouchen

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  docker-compose.yml  pyproject.toml  test_qdrant_status.py
archive/old-langchain-implementation/: README.md  agent.py
data/permissions/: roles.json
data/schema/: backup_db_schema_actual.json  doris_schema_enhanced.json  ecommerce_schema.json
data/sql/: 01_categories.sql  02_dim_date.sql  03_dim_region.sql
data/vector_store/: embeddings.npy  tables.pkl
docker/: docker-compose.qdrant.yml
docs/: dataflow.md
scripts/: index_schema.py  index_schema_vectors.py  init_mysql.sql
scripts/data_generation/: etl_doris_dw.py  generate_doris_data.py  import_data.py
scripts/setup/: setup_qdrant.py
scripts/testing/: test_qdrant_search.py
src/: agent.py  config.py  main.py  models.py
src/graph/: __init__.py  builder.py  logging_middleware.py  state.py
src/services/: audit.py  datasource_router.py  few_shot_store.py  metric_knowledge.py  permission.py  qdrant_client.py  schema_embedding.py  schema_store.py  success_case_store.py  tracer.py
src/tools/: __init__.py  intent_parser.py  schema_retriever.py  sql_executor.py  sql_generator.py
src/utils/: sql_safety.py
tests/: conftest.py  test_graph_e2e.py  test_intent_with_metrics.py  test_logging_middleware.py  test_metric_knowledge.py  test_permission.py  test_qdrant_client.py  test_schema_store.py  test_sql_generator.py  test_state.py  test_success_case_store.py  test_tools.py  test_tracer.py
tests/test_cases/: phase1_test_cases.json  (+3 more)
(+46 files in other folders)
